@@ -1,3 +1,4 @@
 EBUILD qutim-urlpreview-0.2.9999.ebuild 985 RMD160 1eac5b72bfa875daa217bd2984735623108ce4c4 SHA1 04ca9005a016b2dcc48f7399b59d8120ea0e4f18 SHA256 af1df4570999fddbc1bcdf08d5a8dea88c8ab52f0006f7045638d20d00910b9e
-MISC ChangeLog 286 RMD160 5bd7409f622221da5d6019dd0b67ae8c13ca1fb6 SHA1 c643d66f6b0b1d29eaa6dac8e335b11f0b278391 SHA256 85de7ebe607de69ea17e7b5dd527ac9b024957d08e677688cc76e0ad2bd8199c
+EBUILD qutim-urlpreview-0.3.9999.ebuild 960 RMD160 b5fd47344e363935d8ea587c05c3519d74a60096 SHA1 577946ee182adcc807ec2431426e903e27345d5d SHA256 23e0a9b029936e9eea748f257b52b62707979abe9ae33d88d219dbc3a4798e94
+MISC ChangeLog 446 RMD160 2bee12251a8b2317165606fb42ec881d57dda89e SHA1 3945bc45411a87f5c6719bf7cc4551c1c869daec SHA256 9a0671a5bbb19a0a8fc7f22f76a4c07c64881ed5be5ffefc7cb23ebb21eaaae5
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
