@@ -1,3 +1,4 @@
 EBUILD qutim-yandexnarod-0.2.9999.ebuild 1072 RMD160 e857c4deb40cb2c99fc10ada9fde7ce46738a9f2 SHA1 ce9a3f646d815e4ac4c1b9e9700a3c498adac284 SHA256 64d10fc25d6845db1299f424a729ed01d22f61487f377dbdda488ff27f86234e
-MISC ChangeLog 288 RMD160 ac4cd85c20ede28e206ddf388b31c4f91f53f456 SHA1 4b808cabfae5e6703b1ef929913fc1d7ad3a64e7 SHA256 ca308fe0e1e798af682b6f6bf289e0cc667a91b57992bdf7b848ce6ea1cdee29
+EBUILD qutim-yandexnarod-0.3.9999.ebuild 960 RMD160 b5fd47344e363935d8ea587c05c3519d74a60096 SHA1 577946ee182adcc807ec2431426e903e27345d5d SHA256 23e0a9b029936e9eea748f257b52b62707979abe9ae33d88d219dbc3a4798e94
+MISC ChangeLog 450 RMD160 61a8bb6b8740f892ad4814b385bca3a1de56f94b SHA1 dcac1455ec2aad90463f898d66ab483c12452c3c SHA256 bf51a851113128b8d3f052046f2b907d76a1cca26db042c3285fe7802d3c5d42
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
